--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.4.3
 South==0.7.6
 beautifulsoup4==4.1.3
 distribute==0.6.34
+dj-database-url==0.2.1
 django-extensions==1.1.0
 django-rq==0.4.5
 django-zebra==0.4.3
