--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.4.3
 South==0.7.6
+argparse==1.2.1
 beautifulsoup4==4.1.3
 distribute==0.6.34
 dj-database-url==0.2.1
@@ -18,5 +19,6 @@ simplejson==3.1.0
 six==1.2.0
 stripe==1.7.10
 times==0.6.1
+validate-email==1.1
 virtualenv==1.8.4
 wsgiref==0.1.2
