--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-zebra==0.4.3
 mechanize==0.2.5
 psycopg2==2.4.6
 py-bcrypt==0.2
+pydns==2.3.6
 python-dateutil==2.1
 pytz==2012j
 redis==2.7.2
